--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -120,6 +120,107 @@
 	file = {Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\4FCL76AQ\\j.1468-005X.2005.00154.html:text/html}
 }
 
+@book{hentrich_arbeiten_2002,
+	title = {Arbeiten und {Lernen} in {Netzwerken}},
+	url = {http://www.forschungsnetzwerk.at/downloadpub/arbeiten_lernen_Reader_Netzwerke.pdf},
+	urldate = {2019-01-03},
+	author = {Hentrich, Jörg and Hoß, Dietrich},
+	year = {2002},
+	file = {arbeiten_lernen_Reader_Netzwerke.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\ZBLPHRQR\\arbeiten_lernen_Reader_Netzwerke.pdf:application/pdf}
+}
+
+@article{wang_using_2007,
+	title = {Using {Augmented} {Reality} to {Plan} {Virtual} {Construction} {Worksite}},
+	volume = {4},
+	issn = {1729-8814},
+	url = {https://doi.org/10.5772/5677},
+	doi = {10.5772/5677},
+	abstract = {Current construction worksite layout planning heavily relies on 2D paper media where the worksite planners sketch the future layout adjacent to their real environment. This traditional approach turns out to be ineffective and prone to error because only experienced and well-trained planners are able to generate the effective layout design with paper sketch. Augmented Reality (AR), as a new user interface technology, introduces a completely new perspective for construction worksite planning. This paper disucsses the related AR work and issues in construction and describes the concept and prototype of an AR-based construction planning tool, AR Planner with virtual elements sets and tangible interface. The focus of the paper is to identify and integrate worksite planning rules into the AR planner with the purpose of intelligently preventing potential planning errors and process inefficiency, thus maximizing the overall productivity. Future work includes refining and verifying AR Planner in realistic projects.},
+	language = {en},
+	number = {4},
+	urldate = {2019-01-04},
+	journal = {International Journal of Advanced Robotic Systems},
+	author = {Wang, Xiangyu},
+	month = dec,
+	year = {2007},
+	pages = {42},
+	file = {SAGE PDF Full Text:C\:\\Users\\Fabian\\Zotero\\storage\\TVD3566X\\Wang - 2007 - Using Augmented Reality to Plan Virtual Constructi.pdf:application/pdf}
+}
+
+@inproceedings{wolk_utilizing_2008,
+	title = {Utilizing {Google} {Earth} and {Google} {Sketchup} to visualize wind farms},
+	doi = {10.1109/ISTAS.2008.4559793},
+	abstract = {The focus of this proposed research involves the utilization of computer-generated visualizations of proposed wind farms in an effort to provide reliable information to citizens most affected by their presence. Employing the capabilities of Google Earth and Google Sketchup, project planners and developers may offer a resource that individual citizens can manipulate from their own prospective and point of view to determine the scope and effect of projects from where they live, work, and play. Citizen participation in the planning process becomes enhanced through the deployment of computer technology made available on the Internet. Although wind farms remain the primary focus of this paper, the technology may be used in all planning processes where citizen support is required and potential opposition is mitigated by providing accurate and reliable information.},
+	booktitle = {2008 {IEEE} {International} {Symposium} on {Technology} and {Society}},
+	author = {Wolk, R. M.},
+	month = jun,
+	year = {2008},
+	keywords = {Costs, data visualisation, Earth, Google Earth, Google Sketchup, Internet, planning process, Process planning, Renewable energy resources, search engines, Technology planning, Visualization, Wind energy, Wind energy generation, Wind farms, wind farms visualisation, Wind power generation},
+	pages = {1--8},
+	file = {IEEE Xplore Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\N5TNUBGK\\Wolk - 2008 - Utilizing Google Earth and Google Sketchup to visu.pdf:application/pdf}
+}
+
+@article{helander_joel_2017,
+	title = {{JOEL} {VANHALAKKA} {VALUE} {CREATION} {IN} {VIRTUAL} {AND} {AUGMENTED} {REALITY}},
+	language = {en},
+	author = {Helander, Nina and Ilvonen, D Ilona},
+	year = {2017},
+	pages = {108},
+	file = {Helander and Ilvonen - JOEL VANHALAKKA VALUE CREATION IN VIRTUAL AND AUGM.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\EKA2PL9F\\Helander and Ilvonen - JOEL VANHALAKKA VALUE CREATION IN VIRTUAL AND AUGM.pdf:application/pdf}
+}
+
+@article{heesom_trends_2004,
+	title = {Trends of 4D {CAD} applications for construction planning},
+	volume = {22},
+	issn = {0144-6193},
+	url = {https://doi.org/10.1080/0144619042000201376},
+	doi = {10.1080/0144619042000201376},
+	abstract = {Since the early 1990s, there has been a growing interest in four‐dimensional computer aided design (4D CAD) for construction project planning. Commercial 4D CAD applications are becoming more accessible and the use of this technology allows the construction planner to produce more rigorous schedules. A review of the technical competencies of these packages highlights that most of the commercially available packages concentrate on the use of 4D CAD simulations for aesthetic visualization purposes. Very few packages offer the ability to carry out analytical tasks on the developed simulation and this is often left to the interpretation of the user. A thorough appraisal of emerging research developments in 4D planning highlights that this technology is employed for various applications; however, the amount of detail required in a 4D simulation is still ambiguous. A model is proposed to determine the attributes required for use with each of the various applications of 4D CAD simulations. Finally, various lines of future research are highlighted, including the need for improved use of data exchange standards and the automation of linking the construction tasks to the 3D CAD model.},
+	number = {2},
+	urldate = {2019-01-04},
+	journal = {Construction Management and Economics},
+	author = {Heesom, David and Mahdjoubi, Lamine},
+	month = feb,
+	year = {2004},
+	keywords = {Visualization, construction planning, four‐dimensional CAD, simulation},
+	pages = {171--182},
+	file = {Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\439CCS25\\0144619042000201376.html:text/html}
+}
+
+@article{tabusca_augmented_2014,
+	title = {Augmented {Reality} – {Need}, {Opportunity} {Or} {Fashion}},
+	volume = {8},
+	url = {https://ideas.repec.org/a/rau/journl/v8y2014i2p307-315.html},
+	abstract = {This article is focused on the Augmented Reality realities, from the point of view of a software developer in 2014. The first introductory part of the paper aims to familiarize the reader with the Augmented Reality applications today, from code development, programming languages and choices, history and relations to QR codes, up to the different implementation options available today. The main practical, scientific, result presented within the article is a new application developed for upgrading a previous AR solution presented in 2013. This new application makes a step forward from the 2D user-oriented presentation previously used, to a virtual 3D presentation of the AR content.},
+	language = {en},
+	number = {2},
+	urldate = {2019-01-04},
+	journal = {Journal of Information Systems \& Operations Management},
+	author = {Tăbuşcă, Alexandru},
+	year = {2014},
+	keywords = {3D, AR, augmented reality, canvas, html5, QR, web services},
+	pages = {307--315},
+	file = {Fullext PDF:C\:\\Users\\Fabian\\Zotero\\storage\\XBIC976M\\Tăbuşcă - 2014 - Augmented Reality – Need, Opportunity Or Fashion.pdf:application/pdf;Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\UV5RG6KE\\v8y2014i2p307-315.html:text/html}
+}
+
+@article{wang_using_2007,
+	title = {Using {Augmented} {Reality} to {Plan} {Virtual} {Construction} {Worksite}},
+	volume = {4},
+	issn = {1729-8814},
+	url = {https://doi.org/10.5772/5677},
+	doi = {10.5772/5677},
+	abstract = {Current construction worksite layout planning heavily relies on 2D paper media where the worksite planners sketch the future layout adjacent to their real environment. This traditional approach turns out to be ineffective and prone to error because only experienced and well-trained planners are able to generate the effective layout design with paper sketch. Augmented Reality (AR), as a new user interface technology, introduces a completely new perspective for construction worksite planning. This paper disucsses the related AR work and issues in construction and describes the concept and prototype of an AR-based construction planning tool, AR Planner with virtual elements sets and tangible interface. The focus of the paper is to identify and integrate worksite planning rules into the AR planner with the purpose of intelligently preventing potential planning errors and process inefficiency, thus maximizing the overall productivity. Future work includes refining and verifying AR Planner in realistic projects.},
+	language = {en},
+	number = {4},
+	urldate = {2019-01-04},
+	journal = {International Journal of Advanced Robotic Systems},
+	author = {Wang, Xiangyu},
+	month = dec,
+	year = {2007},
+	pages = {42},
+	file = {SAGE PDF Full Text:C\:\\Users\\Fabian\\Zotero\\storage\\P69Y6B96\\Wang - 2007 - Using Augmented Reality to Plan Virtual Constructi.pdf:application/pdf}
+}
+
 @incollection{bohnsack_gruppendiskussionsverfahren_2001,
 	address = {Baltmannsweiler},
 	title = {Gruppendiskussionsverfahren},
