--- a/Header/Header.tex
+++ b/Header/Header.tex
@@ -3,7 +3,7 @@
 % Rendering packages
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{graphicx}
+\usepackage{graphicx, float}
 \usepackage{color}
 \usepackage{fancyvrb}
 
