--- a/Kapitel/Kapitel3.tex
+++ b/Kapitel/Kapitel3.tex
@@ -3,6 +3,7 @@
 Dieses Kapitel behandelt die in dieser Arbeit angewandten Methoden zur Erhebung der Daten und Erarbeitung der Lösung zu einem gefundenen Problem. Es soll die Vorgehensweise theoretisch beschreiben und untermauern.
 
 \section{Fokusgruppe}
+\label{sec:fokus}
 
 Bei einer Fokusgruppe handelt es sich um ein moderiertes Diskursverfahren, bei dem ein Meinungsbild durch die Interaktion einer ausgewählten Gruppe erzeugt wird und somit Daten über ein festgelegtes Thema erhoben werden. Man kann es als Kombination aus fokussiertem Interview und Gruppendiskussion sehen. Als Instrument zur Datenerhebung in den Sozialwissenschaften hat es sich in den 60er und 70er Jahren etabliert. Es wird für folgende Felder verwendet \cite{schulz_quick_2012}:
 
@@ -75,6 +76,7 @@ Um das Wissen festzuhalten, macht sich der Ethnologe am besten direkt nach einem
 Mit dieser Methode lässt sich ein Beruf analysieren, wobei man nicht alle Einzelheiten festhalten kann. Dadurch ist es dem Forscher möglich Ansatzpunkte für weitere Forschung oder Verbesserungen zu finden.
 
 \section{Gestaltungsorientierte Forschung: Implementieren eines Prototypen}
+\label{sec:gestForsch}
 
 Mit den Methoden Fokusgruppe und Ethnographie wird ein bestehendes Problem genauer beleuchtet und dabei herausgearbeitet, ob die Lösung dieses Problems wünschenswert ist. Auf Basis des erörterten Umstands soll dann eine Lösung gefunden werden, die dem Forscher und allen beteiligten Parteien genügt. Dabei stellt sich die Frage, wie man das Problem adressiert. Für problembasierte Forschung ist der Weg zu einer Lösung nicht geradlinig, weshalb ein flexibler Ansatz genutzt werden soll, wofür sich laut Hevner et al. \cite{hevner_design_nodate} die Methode \textit{Gestaltungsorientierte Forschung} anbietet. Dabei wird von einem Problem augegangen und über einen inkrementellen, iterativen Prozess eine Lösung erarbeitet. Hevner identifiziert dazu fünf charakteristische Faktoren von Problemen, die mit gestaltungsorientierter Forschung angegangen werden \cite{hevner_design_nodate}:
 
