--- a/Kapitel/Kapitel5.tex
+++ b/Kapitel/Kapitel5.tex
@@ -6,7 +6,7 @@ Um meine Beobachtungen besser einordnen zu können, soll hier mein persönlicher
 
 Ich arbeitete nach dem Abitur als Aushilfe in einer Praktiker Filiale, wodurch ich sporadisch mit Baustoffen vertraut gemacht wurde. Diese Erfahrung half mir bei meinem Praktikum, da ich die Baustoffe kannte, mit denen wir täglich umgegangen sind und wusste wie man diese handhabt. Zusätzlich bin ich sportlich, was vorteilhaft für den körperlich anspruchsvollen Beruf eines Handwerkers ist, bei dem man oft schwer tragen muss.
 
-In diesem Praktikum sammelte ich also meine ersten Erfahrungen in einem Handwerklichen Beruf. Ich traf den Fliesenleger bei einem Vorgespräch zum Praktikum, bei dem ich ihm meine Masterarbeit vorstellte, zum ersten Mal. Er leitet seit [TODO] einen Ein-Mann-Betrieb und ist in seiner Umgebung sehr bekannt und angesehen. In seiner Laufbahn erhielt er sporadisch Unterstützung durch Praktikanten oder andere Fliesenleger, arbeitete jedoch sonst allein. Er wusste also wie man mit Praktikanten umgeht und konnte mir so passend Wissen vermitteln.
+In diesem Praktikum sammelte ich also meine ersten Erfahrungen in einem Handwerklichen Beruf. Ich traf den Fliesenleger bei einem Vorgespräch zum Praktikum, bei dem ich ihm meine Masterarbeit vorstellte, zum ersten Mal. Er leitet seit 25 Jahren einen Ein-Mann-Betrieb und ist in seiner Umgebung sehr bekannt und angesehen. In seiner Laufbahn erhielt er sporadisch Unterstützung durch Praktikanten oder andere Fliesenleger, arbeitete jedoch sonst allein. Er wusste also wie man mit Praktikanten umgeht und konnte mir so passend Wissen vermitteln.
 
 \section{Ziel der Ethnographie}
 
@@ -24,7 +24,7 @@ Zur Dokumentation nutzte ich einen Notizblock, auf welchen ich meine Beobachtung
 
 Insgesamt dauerte das Praktikum knapp zwei Wochen, vom 30.07.2018 bis zum 10.08.2018. Jeden Tag waren wir ca. von 8 Uhr bis 15 Uhr auf einer Baustelle.
 
-Meine Aufzeichnungen fertigte ich in chronologischer Reihenfolge an. Für diese Arbeit und einen Leser ist das jedoch wenig sinnvoll die Informationen in dieser Reihenfolge aufzunehmen. Deswegen fasse ich in dieser Ethnographie die Arbeit der einzelnen Tage zusammen und gebe sie als Text, welcher den Ablauf des Fliesens eines Bades beschreibt, wieder. Die Ausführungen beginnen also beim Kundengespräch im Rohbau eines Raumes und enden in einem fertigen Badezimmer. Im Laufe meines Praktikums durchlief ich dazu alle Schritte, jedoch in unterschiedlicher Reihen-folge und auf vielen verschiedenen Baustellen. Zur Zeit des Beginns meines Praktikums bearbeitete der Fliesenleger nämlich mehrere offene Baustellen und nahm zeit-gleich auch neue Projekte auf. Durch diese Anordnung der Ereignisse bekommt der Leser einen Gesamteindruck, wie die Arbeit eines Fliesenlegers aussieht und kann besser nachvollziehen wo und wie ich meine Ansätze für oben genannte Ziele fand.
+Meine Aufzeichnungen fertigte ich in chronologischer Reihenfolge an. Für diese Arbeit und einen Leser ist das jedoch wenig sinnvoll die Informationen in dieser Reihenfolge aufzunehmen. Deswegen fasse ich in dieser Ethnographie die Arbeit der einzelnen Tage zusammen und gebe sie als Text, welcher den Ablauf des Fliesens eines Bades beschreibt, wieder. Die Ausführungen beginnen also beim Kundengespräch im Rohbau eines Raumes und enden in einem fertigen Badezimmer. Im Laufe meines Praktikums durchlief ich dazu alle Schritte, jedoch in unterschiedlicher Reihen-folge und auf vielen verschiedenen Baustellen. Zur Zeit des Beginns meines Praktikums bearbeitete der Fliesenleger nämlich mehrere offene Baustellen und nahm zeitgleich auch neue Projekte auf. Durch diese Anordnung der Ereignisse bekommt der Leser einen Gesamteindruck, wie die Arbeit eines Fliesenlegers aussieht und kann besser nachvollziehen wo und wie ich meine Ansätze für oben genannte Ziele fand.
 
 \section{Ablauf und Ergebnisse der Ethnographie}
 
@@ -37,21 +37,74 @@ Ich fragte den Fliesenleger, bevor wir zur ersten Baustelle fuhren, wie Kundenge
 	\item Der Kunde hat keine genaue Vorstellung des Endergebnisses und verlässt sich auf die Beratung durch den Fliesenleger.
 \end{itemize}
 
-Bei ersterem hört er sich den Plan des Kunden an und bietet ihm zusätzlich be-ratend eigene Vorschläge an. Teilweise möchten Kunden das nicht und beharren dar-auf ihre Vorstellungen genau umgesetzt zu bekommen. Er persönlich führt solche Auf-träge teilweise nicht durch. Dazu kommt es, wenn ein Kunde etwas umgesetzt haben möchte, was er für schlechte Praxis hält, da das die generelle Qualität seiner Arbeit schmälern und spätere Mängel auf ihn zurückfallen. 
+Bei ersterem hört er sich den Plan des Kunden an und bietet ihm zusätzlich beratend eigene Vorschläge an. Teilweise möchten Kunden das nicht und beharren darauf ihre Vorstellungen genau umgesetzt zu bekommen. Er persönlich führt solche Aufträge teilweise nicht durch. Dazu kommt es, wenn ein Kunde etwas umgesetzt haben möchte, was er für schlechte Praxis hält, da das die generelle Qualität seiner Arbeit schmälern und spätere Mängel auf ihn zurückfallen. 
 
 In zweiterem Szenario legt der Fliesenleger dem Kunden seine Vorstellungen des fertigen Raumes dar. Dieser kann dann seine Meinung dazu äußern, Anregungen geben und Änderungen vorschlagen. Laut dem Fliesenleger können Kunden sich das Ergebnis aber im leeren Rohbau nicht vorstellen und überlassen ihm als Profi die komplette Planung. Eine persönliche Note im Bad zu hinterlassen und guten Kundenbezug aufzubauen sieht der Fliesenleger dabei als sein Markenzeichen.
 
-Auf einer Baustelle arbeiten oft verschiedene Handwerker, wie Maurer, Trockenbauer, Installateur und Fliesenleger zusammen. Es ist von Vorteil, wenn sie zusammen planen, um von Anfang an festzulegen wo beispielsweise Dusche, Badewanne, Toilette und Waschbecken positioniert werden sollen. Für diese Elemente gibt es Din Normen die eingehalten werden müssen. Eine Toilette muss zum Beispiel in einem gewissen Abstand über dem Boden aufgehängt werden. Wenn dieser Plan vor-her festgelegt wird, vereinfacht das die Zusammenarbeit enorm. Auf der Baustelle auf der ich meine Beobachtungen machte, waren diese Planungen bereits abgeschlossen. Es ging also nur noch um das Vorbereiten und Verlegen der Fliesen.
+Auf einer Baustelle arbeiten oft verschiedene Handwerker, wie Maurer, Trockenbauer, Installateur und Fliesenleger zusammen. Es ist von Vorteil, wenn sie zusammen planen, um von Anfang an festzulegen wo beispielsweise Dusche, Badewanne, Toilette und Waschbecken positioniert werden sollen. Für diese Elemente gibt es DIN Normen die eingehalten werden müssen. Eine Toilette muss zum Beispiel in einem gewissen Abstand über dem Boden aufgehängt werden. Wenn dieser Plan vorher festgelegt wird, vereinfacht das die Zusammenarbeit enorm. Auf der Baustelle auf der ich meine Beobachtungen machte, waren diese Planungen bereits abgeschlossen. Es ging also nur noch um das Vorbereiten und Verlegen der Fliesen.
 
 Der Kunde, mit welchem wir das Kundengespräch führten war selbst Handwerker, Elektriker. Er hatte auf Baustellen schon mit Fliesenlegern zusammengearbeitet, wodurch er deren Planung und Arbeit besser einschätzen konnte. 
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_090215_HDR.jpg}
+		\caption{Rohbau}	
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180731_085142_HDR.jpg}
+		\caption{Rohbau: Dusche}	
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_090144_HDR.jpg}
+		\caption{Rohbau: Badewanne mit eingesetzter Bauplatte}	
+	\end{center}
+\end{figure}
 
 Zu Anfang führte uns der Kunde auf der Baustelle in den Rohbau des Bads, welches er verfliest und installiert haben wollte. Der Raum wurde bis jetzt nur von den Maurern verputzt. Nischen für eine Badewanne und eine Dusche waren jedoch schon vorgesehen. Die Wannen dafür waren bereits in den Nischen positioniert. Der Kunde wollte 20x30cm Fliesen im Raum verlegen, welche er uns im Katalog zeigte, und fragte den Fliesenleger nach seiner Meinung. Dieser nahm darauf seinen Meterstab zur Hand und fing an die einzelnen Seitenwände des Raumes zu bestimmen. Dies nahm ca. 5 Minuten in Anspruch. Der Fliesenleger schlug dem Kunden anschließend vor die Fliesen diagonal im Raum zu verlegen, da das ein schönes Muster ergäbe. Der Kunde reagierte auf diesen Vorschlag skeptisch und meinte er könne sich das nicht vorstellen. Er war der Meinung es sähe besser aus die Fliesen parallel zu der Wand, welche man direkt vor sich sieht wenn man den Raum betritt, zu verlegen. Der Fliesenleger skizzierte den Raum nun auf seinem Block und zeichnete die zwei Muster, parallel oder diagonal, grob ein und zeigte es dem Kunden. Die Zeichnungen verdeutlichten die beiden Ideen etwas, waren aber keine genaue Darstellung des Endergebnisses, nur eine Idee. Daraufhin begann eine rege Diskussion zwischen Fliesenleger und Kunde. Der Kunde war von seiner Idee überzeugt, stellte sich an verschiedene Punkte im Raum und schilderte seine Gedanken, woraufhin der Fliesenleger versuchte Vor- und Nachteile der Idee herauszuarbeiten. Am Ende einigten sie sich auf die Variante, die vom Kunden gewünscht wurde.
 
 Laut dem Fliesenleger muss man die Wandfliesen an den Boden anpassen. Daher sollen auch diese horizontal zum Boden verlegt werden. Für die Wand sollen aber kleinere Fliesen verwendet werden.
 
-Anschließend besprachen sie noch Details. Der Kunde wollte auf dem eingemauerten Spülkasten der Toilette keine Sockelleisten an der Wand anbringen. Der Fliesenleger überzeugte ihn jedoch vom Gegenteil, da sonst beim Putzen der Ablage leicht Feuchtigkeit an die verputzte Wand gelangen konnte. Aus dem gleichen Grund riet er ihm die Nische in der Dusche, welche zum Abstellen von Duschgel gedacht ist, komplett zu verfliesen. Bei der Abstellnische neben der Badewanne beharrte der Kunde jedoch darauf, das diese nicht verfliest werden sollte, da es so besser aussähe. Er ließ sich auch von dem Argument, dass man dadurch immer Feuchtigkeit direkt auf der verputzten Mauer hat, was nicht gut ist, nicht überzeugen. Auch am Waschbecken wollte er die Wand nicht bis über das Waschbecken verfliest haben. Dadurch entsteht die Gefahr von Feuchtigkeit auf der Wand durch Spritzwasser.
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_131918_HDR.jpg}
+		\label{toilette}
+		\caption{Toilettenkasten mit Sockelleiste}	
+	\end{center}
+\end{figure}
 
-Bei diesem Kundengespräch fiel mir auf, dass es sehr unkoordiniert ablief. Die beiden Parteien redeten oft aneinander vorbei oder wiederholten ihre Gedanken, in der Hoffnung, dass ihr Gegenüber es dadurch besser versteht. Am deutlichsten wurde das bei dem Vorschlag des Fliesenlegers, die Fliesen diagonal zu verlegen. Mir kam es so vor, als könnte der Kunde sich das Muster im leeren Raum nicht vorstellen und reagierte deshalb mit Abneigung auf den Vorschlag. Ich selbst konnte es mir auch schlecht ausmalen und hätte mich hier auf den Fachmann und sein geschultes Auge verlassen müssen. Später fragte ich den Fliesenleger dazu, woraufhin er mir erklärte, das Kunden tatsächlich wenig Vorstellungskraft besitzen, um sich komplett auf neue Vorschläge einzulassen, sich diese Vorzustellen und sie in Betracht ziehen, bei der Planung ihres Bads oder anderer Räume. Das erschwert die Kommunikation zwischen Experten und Kunden. Dadurch haben Kunde und Fliesenleger nach dem Gespräch oft unterschiedliche Vorstellungen im Kopf. Dann ist der Plan nicht genau festgelegt, was fehlerhafter Ausführung des Vertrags führen kann.
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_132004_HDR.jpg}
+		\label{duschenische}
+		\caption{Dusche mit verfliester Abstellnische}	
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_131945_HDR.jpg}
+		\label{wannenische}
+		\caption{Badewanne mit nicht verfliester Abstellnische}	
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_131936_HDR.jpg}
+		\label{waschbecken}
+		\caption{Waschbecken mit nicht komplett verfliester Wand}	
+	\end{center}
+\end{figure}
+
+Anschließend besprachen sie noch Details. Der Kunde wollte auf dem eingemauerten Spülkasten der Toilette keine Sockelleisten an der Wand anbringen. Der Fliesenleger überzeugte ihn jedoch vom Gegenteil, da sonst beim Putzen der Ablage leicht Feuchtigkeit an die verputzte Wand gelangen konnte (siehe Abbildung \ref{toilette}). Aus dem gleichen Grund riet er ihm die Nische in der Dusche, welche zum Abstellen von Duschgel gedacht ist, komplett zu verfliesen (siehe Abbildung \ref{duschenische}). Bei der Abstellnische neben der Badewanne beharrte der Kunde jedoch darauf, das diese nicht verfliest werden sollte, da es so besser aussähe (siehe Abbildung \ref{wannenische}). Er ließ sich auch von dem Argument, dass man dadurch immer Feuchtigkeit direkt auf der verputzten Mauer hat, was nicht gut ist, nicht überzeugen. Auch am Waschbecken wollte er die Wand nicht bis weit über das Waschbecken verfliest haben (siehe Abbildung \ref{waschbecken}). Dadurch entsteht die Gefahr von Feuchtigkeit auf der Wand durch Spritzwasser.
+
+Bei diesem Kundengespräch fiel mir auf, dass es sehr unkoordiniert ablief. Die beiden Parteien redeten oft aneinander vorbei oder wiederholten ihre Gedanken, in der Hoffnung, dass ihr Gegenüber es dadurch besser versteht. Am deutlichsten wurde das bei dem Vorschlag des Fliesenlegers, die Fliesen diagonal zu verlegen. Mir kam es so vor, als könnte der Kunde sich das Muster im leeren Raum nicht vorstellen und reagierte deshalb mit Abneigung auf den Vorschlag. Ich selbst konnte es mir auch schlecht ausmalen und hätte mich hier auf den Fachmann und sein geschultes Auge verlassen müssen. Später fragte ich den Fliesenleger dazu, woraufhin er mir erklärte, dass Kunden tatsächlich wenig Vorstellungskraft besitzen, um sich komplett auf neue Vorschläge einzulassen, sich diese Vorzustellen und sie in Betracht ziehen, bei der Planung ihres Bads oder anderer Räume. Das erschwert die Kommunikation zwischen Experten und Kunden. Dadurch haben Kunde und Fliesenleger nach dem Gespräch oft unterschiedliche Vorstellungen im Kopf. Dann ist der Plan nicht genau festgelegt, was zu fehlerhafter Ausführung des Vertrags führen kann.
 
 \subsection{Planung: Material}
 
@@ -78,19 +131,75 @@ Die Wände der Dusche waren unten nicht senkrecht verputzt worden. Über eine sc
 
 Währenddessen baute der Fliesenleger eine Bauplatte an der Seite der Badewanne ein. Dazu nahm er zuerst grob Maß und schnitt die Bauplatte zurecht. Das ging in weniger als einer Minute, da sie nicht genau passen muss, weil anschließend darüber gefliest wird und man Ungenauigkeiten nicht mehr sieht. Dann klebte er die Bauplatte mit Mörtel ein. Mit einer Wasserwage überprüfte er ob diese senkrecht zum Boden stand und korrigierte sie entsprechend. Danach klebte er, den Vorschriften für die Installation von Badewannen entsprechend, Abdichtbänder an deren Seiten ein. Da der Boden leichte Unebenheiten aufweisen kann, muss dieser noch geebnet werden. Dafür nutzt man Periplan, eine sehr flüssige Masse die der Fliesenleger mit einer gezahnten Kelle auf dem gesamten Boden verteilte. Durch ihren wässrigen Charakter breitete sie sich gleichmäßig auf dem Boden aus und ebnete ihn so. Wir ließen sie bis zum nächsten Tag anziehen. 
 
-Nun mussten die Wände der Dusche den Vorschriften gemäß wasserdicht ge-macht werden. Nur Fliesen alleine bieten einen ungenügenden Schutz gegen Wasser. Dazu strich ich die gesamte Dusche mit Lastogum, einer Flüssigfolie aus. Diese bildet auf der Mauer eine Wasserundurchlässige Schicht. In den Kanten der Dusche mussten Abdichtbänder eingeklebt werden. Dazu schnitt ich nach Augenmaß die Bänder zurecht. Anschließend strich ich dick Flüssigfolie in die Kanten und klebte das Ab-dichtband ein. Währenddessen bestrich der Fliesenleger den Periplanboden mit Hilfe einer feinzahnigen Kelle mit Kleber und legte die Entkopplungsmatten darauf. Die Kelle mit 2mm Stärke benutzte er, damit er den Kleber nicht zu dick aufträgt, damit die Matte nicht schwimmt und wellig wird. Daraufhin klebte ich die Abdichtbänder auch in die Kanten des Bodens, auf die Entkopplungsmatten. Der Fliesenleger klebte danach noch Abdichtecken in alle Ecken des Raums, um ihn komplett wasserdicht zu machen. Anschließend grundierten wir den Boden und alle Wände. Dann war alles bereit zum Fliesenverlegen.
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_114911_HDR.jpg}
+		\label{duscheDicht}
+		\caption{Abgedichtete Dusche}	
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_114820_HDR.jpg}
+		\label{bodenDicht}
+		\caption{Boden mit Entkopplungsmatten und Abdichtbändern in den Ecken}	
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180801_114836_HDR.jpg}
+		\label{eckeDicht}
+		\caption{Ecke mit Abdichtbändern}	
+	\end{center}
+\end{figure}
+
+Nun mussten die Wände der Dusche den Vorschriften gemäß wasserdicht gemacht werden. Nur Fliesen alleine bieten einen ungenügenden Schutz gegen Wasser. Dazu strich ich die gesamte Dusche mit Lastogum, einer Flüssigfolie aus. Diese bildet auf der Mauer eine Wasserundurchlässige Schicht. In den Kanten der Dusche mussten Abdichtbänder eingeklebt werden. Dazu schnitt ich nach Augenmaß die Bänder zurecht. Anschließend strich ich dick Flüssigfolie in die Kanten und klebte das Abdichtband ein (siehe Abbildung \ref{duscheDicht}). Währenddessen bestrich der Fliesenleger den Periplanboden mit Hilfe einer feinzahnigen Kelle mit Kleber und legte die Entkopplungsmatten darauf (siehe Abbildung \ref{bodenDicht}). Die Kelle mit 2mm Stärke benutzte er, damit er den Kleber nicht zu dick aufträgt, damit die Matte nicht schwimmt und wellig wird. Daraufhin klebte ich die Abdichtbänder auch in die Kanten des Bodens, auf die Entkopplungsmatten. Der Fliesenleger klebte danach noch Abdichtecken in alle Ecken des Raums, um ihn komplett wasserdicht zu machen (siehe Abbildung \ref{eckeDicht}). Anschließend grundierten wir den Boden und alle Wände. Dann war alles bereit zum Fliesenverlegen.
 
 \subsection{Fliesen verlegen und verfugen}
 
-Der Fliesenleger wollte zuerst die Wandfliesen verlegen. Dazu bestimmte er zuerst noch einmal ganz genau die Länge der ersten Wand. Er bestimmte zusätzlich ob der Boden entlang der Wand gerade verlief, oder ob sich Unebenheiten zeigten. Damit wollte der den Verschnitt bestimmen, den er am Boden haben wird, oder ob der, bei geradem Boden, ganze Fliesen bis nach unten verlegen konnte. Er wollte ca. auf Schulterhöhe mit dem Verlegen beginnen. Dazu zeichneten wir eine horizontale Orientierungslinie mit einer Schlagschnur an. Durch diese Linie konnte er sichergehen, dass die Wandfliesen nicht schief wurden, wenn er von einer Seite der Wand zur anderen verlegte. Er strich mit einer gezahnten Kelle Kleber, genug für zwei aneinanderliegende Fliesen, an die Wand und klebte eine Fliese ein. Beim Einkleben der zweiten Fliese ließ er für die Fuge ca. 5mm Platz zur ersten Fliese. Das machte er nach Augenmaß, ohne Abstandshalter. So klebte er eine Linie Fliesen vom einen Ende der Wand zum Anderen, entlang der Orientierungslinie ein. Bis jetzt konnte er dafür ganze Fliesen verwenden, die letzte musste er zuschneiden.
+Der Fliesenleger wollte zuerst die Wandfliesen verlegen. Dazu bestimmte er anfangs noch einmal ganz genau die Länge der ersten Wand. Er bestimmte zusätzlich ob der Boden entlang der Wand gerade verlief, oder ob sich Unebenheiten zeigten. Damit wollte der den Verschnitt bestimmen, den er am Boden haben wird, oder ob der, bei geradem Boden, ganze Fliesen bis nach unten verlegen konnte. Er wollte ca. auf Schulterhöhe mit dem Verlegen beginnen. Dazu zeichneten wir eine horizontale Orientierungslinie mit einer Schlagschnur an. Durch diese Linie konnte er sichergehen, dass die Wandfliesen nicht schief wurden, wenn er von einer Seite der Wand zur anderen verlegte. Er strich mit einer gezahnten Kelle Kleber, genug für zwei aneinanderliegende Fliesen, an die Wand und klebte eine Fliese ein. Beim Einkleben der zweiten Fliese ließ er für die Fuge ca. 5mm Platz zur ersten Fliese. Das machte er nach Augenmaß, ohne Abstandshalter. So klebte er eine Linie Fliesen vom einen Ende der Wand zum Anderen, entlang der Orientierungslinie ein. Bis jetzt konnte er dafür ganze Fliesen verwenden, die letzte musste er zuschneiden.
 
-Er maß den Abstand der letzten Fliese zur Wand. Auf seinem Fliesenschneider konnte er das Maß darauf einstellen, legte die Fliese ein, fuhr einmal mit dem Schnei-der darüber und brach das unbenötigte Stück entlang der Schnittlinie ab. Der gesamte Vorgang dauerte nicht länger als eine Minute.
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180806_081044_HDR.jpg}
+		\label{wandFlieseSchneiden}
+		\caption{Geschnittene Fliesen am Ende der ersten Wand}	
+	\end{center}
+\end{figure}
 
-Die zugeschnittene Fliese brachte er am Ende der Wand an. Anschließend klebte er die zwei Reihen darunter usw. ein. Danach schlugen wir wieder eine horizontale Orientierungslinie an die Wand. Das machten wir regelmäßig, um zu gewährleisten, dass die Fliesenreihe nicht schief wurde. So flieste er die gesamte Wand, während ich ihm die Fliesen reichte.
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180807_120442_HDR.jpg}
+		\label{schneider}
+		\caption{Schneidebrett}	
+	\end{center}
+\end{figure}
+
+Er maß den Abstand der letzten Fliese zur Wand. Auf seinem Fliesenschneider konnte er das Maß darauf einstellen, legte die Fliese ein, fuhr einmal mit dem Schneider darüber und brach das unbenötigte Stück entlang der Schnittlinie ab. Der gesamte Vorgang dauerte nicht länger als eine Minute.
+
+Die zugeschnittene Fliese brachte er am Ende der Wand an. Anschließend klebte er die zwei Reihen darunter usw. ein (siehe Abbildung \ref{wandFlieseSchneiden}). Danach schlugen wir wieder eine horizontale Orientierungslinie an die Wand. Das machten wir regelmäßig, um zu gewährleisten, dass die Fliesenreihe nicht schief wurde. So flieste er die gesamte Wand, während ich ihm die Fliesen reichte.
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180806_081011_HDR.jpg}
+		\label{ersteWand}
+		\caption{Fertige erste Wand und Anfang der Zweiten}	
+	\end{center}
+\end{figure}
 
 Sobald die erste Wand fertig verfliest war begann er mit den anderen und ich fing an die Fliesen zu verfugen. Dazu strich ich mit einer Kelle dick Fugenmasse in die Zwischenräume der Fliesen. Anschließend wischte ich mit einem feuchten Schwamm darüber, um die überschüssige Fugenmasse abzutragen und der Fuge ihr richtiges Aussehen zu geben. Zum Schuss zog ich den frisch ausgewaschenen Schwamm einmal komplett von oben nach unten über die Wand, um die Fliesen sauber zu waschen. So ging ich auch bei den anderen Wänden vor. [TODO: evtl Fenster Geschichte einfügen)
 
-Nach dem Verlegen der Wände begann er mit dem Boden. Durch den Periplanboden war sichergestellt, dass keine Unebenheiten vorhanden sind. Sollte die Mitte des Raumes beispielsweise einen Abfluss haben und man müsste den Boden zu diesem abfallen lassen, müsste der Fliesenleger das beim Verlegen mit einplanen. Hier hatten wir aber einen ebenen Boden. Nun zeichneten wir mit der Schlagschnur wieder eine Orientierungslinie parallel zur Wand ein, ca. so weit von dieser entfernt, wie die Breite zweier aneinandergelegter Fliesen. Ich platzierte einige Bodenfliesen so, dass der Fliesenleger direkt darauf zugreifen kann, während er am Boden kniet und die Fliesen verlegt. Er strich den Kleber auf den Boden und verteilte ihn mit einer gezackten Kelle. Danach legte er die Fliesen darauf. Den Abstand zweier Fliesen für die Fuge bestimmte er per Augenmaß. Die Orientierungslinie diente dazu, dass die Fliesen nicht schief wurden, da er alles nach Augenmaß verlegte. 
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[scale=0.1]{Resources/Praktikum/IMG_20180807_112239_HDR.jpg}
+		\label{orientierung}
+		\caption{Orientierungslinie zum Verlegen der Bodenfliesen}	
+	\end{center}
+\end{figure}
+
+Nach dem Verlegen der Wände begann er mit dem Boden. Durch den Periplanboden war sichergestellt, dass keine Unebenheiten vorhanden sind. Sollte die Mitte des Raumes beispielsweise einen Abfluss haben und man müsste den Boden zu diesem abfallen lassen, müsste der Fliesenleger das beim Verlegen mit einplanen. Hier hatten wir aber einen ebenen Boden. Nun zeichneten wir mit der Schlagschnur wieder eine Orientierungslinie parallel zur Wand ein, ca. so weit von dieser entfernt, wie die Breite zweier aneinandergelegter Fliesen (siehe Abbildung \ref{orientierung}). Ich platzierte einige Bodenfliesen so, dass der Fliesenleger direkt darauf zugreifen kann, während er am Boden kniet und die Fliesen verlegt. Er strich den Kleber auf den Boden und verteilte ihn mit einer gezahnten Kelle. Danach legte er die Fliesen darauf. Den Abstand zweier Fliesen für die Fuge bestimmte er per Augenmaß. Die Orientierungslinie diente dazu, dass die Fliesen nicht schief wurden, da er alles nach Augenmaß verlegte. 
 
 Nachdem er zwei Reihen Fliesen verlegt hatte, stand er auf und wir zeichneten eine weitere Orientierungslinie, zwei Fliesenbreiten weiter, ein. Dann wiederholte sich der ganze Prozess, bis der Boden komplett verlegt war. Mir viel dabei auf, dass der Arbeitsfluss des Fliesenlegers durch das anzeichnen der Orientierungslinie immer wieder unterbrochen wurde. 
 
