--- a/Master.tex
+++ b/Master.tex
@@ -31,9 +31,7 @@
 \input{Kapitel/Kapitel3.tex}
 \input{Kapitel/Kapitel4.tex}
 \input{Kapitel/Kapitel5.tex}
-\input{Kapitel/Robin.tex}
-
-
+\input{Kapitel/Kapitel6.tex}
 
 
 % Optimierung für Literaturverzeichnis
